--- a/example.html
+++ b/example.html
@@ -53,7 +53,7 @@
         <script type="text/javascript">
         $(document).ready(function() {
             $("#webcam").webcam({
-                swffile: "sAS3Cam.swf?v=20120613",
+                swffile: "sAS3Cam.swf?v="+Math.random(),
 
                 previewWidth: 640,
                 previewHeight: 480,
