--- a/example.html
+++ b/example.html
@@ -11,7 +11,7 @@
 -->
 <html>
     <head>
-        <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     	<title> Example of usage: jQuery AS3 Webcam </title>
         <!--<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>-->
         <script type="text/javascript" src="http://zeptojs.com/zepto.min.js"></script>
